giving frank updates cards and pages but repopulation of cards when backspacing in search bar needs to be fixed

--- a/frontend/src/components/Card.module.css
+++ b/frontend/src/components/Card.module.css
@@ -33,7 +33,7 @@
 }
 
 
-.description {
+.locationName {
     font-size: 1rem;
     margin-top: .2px;
 }
